--- a/coffee/templates/coffee/base.html
+++ b/coffee/templates/coffee/base.html
@@ -45,7 +45,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg coffee-nav">
-    <a class="coffee-brand" href="{% url 'home' %}">
+    <a class="coffee-brand" href="{% url 'index' %}">
         Coffee House ☕
     </a>
 
@@ -58,7 +58,7 @@
         <ul class="navbar-nav ms-auto align-items-center">
 
             <li class="nav-item">
-                <a class="coffee-link" href="{% url 'home' %}">Home</a>
+                <a class="coffee-link" href="{% url 'index' %}">Home</a>
             </li>
 
             <li class="nav-item">
