--- a/coffee/templates/coffee/menu.html
+++ b/coffee/templates/coffee/menu.html
@@ -209,7 +209,7 @@
 <nav>
     <h2>Coffee Shop</h2>
     <ul>
-        <li><a href="/home/">Home</a></li>
+        <li><a href="/index/">Home</a></li>
         <li><a href="/menu/">Menu</a></li>
         <li><a href="/about/">About</a></li>
         {% if user.is_authenticated %}
