--- a/coffee/templates/coffee/order.html
+++ b/coffee/templates/coffee/order.html
@@ -128,7 +128,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'home' %}">Home</a>
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'menu' %}">Menu</a>
