--- a/coffee/templates/coffee/order.html
+++ b/coffee/templates/coffee/order.html
@@ -119,7 +119,7 @@
 
 <!-- NAVBAR (SAME STYLE) -->
 <nav class="navbar navbar-expand-lg navbar-dark px-4">
-    <a class="navbar-brand" href="{% url 'home' %}">☕ Coffee House</a>
+    <a class="navbar-brand" href="{% url 'index' %}">☕ Coffee House</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -157,7 +157,7 @@
 
         <div class="d-flex justify-content-center gap-3 mt-4">
             <a href="{% url 'menu' %}" class="btn btn-custom btn-menu">Back to Menu</a>
-            <a href="{% url 'home' %}" class="btn btn-custom btn-home">Home</a>
+            <a href="{% url 'index' %}" class="btn btn-custom btn-home">Home</a>
         </div>
     </div>
 </div>
